--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -22,7 +22,7 @@
                     <a class="nav-link menu-tab"
                        href="{{ path('app.course_info.dashboard.index', { 'id': courseInfo.id }) }}"
                        id="menu-dashboard">
-                        <i class="fas fa-th"></i>
+                        <i class="nav-icon fas fa-th"></i>
                         <p>{{ 'app.sidebar.dashboard' | trans }}</p>
                     </a>
                 </li>
@@ -31,7 +31,7 @@
                         <a class="nav-link menu-tab"
                            href="{{ path('app.course_info.permission.index', { 'id': courseInfo.id }) }}"
                            id="menu-permissions">
-                            <i class="fas fa-user-shield"></i>
+                            <i class="nav-icon fas fa-user-shield"></i>
                             <p>{{ 'app.sidebar.permissions' | trans }}</p>
                         </a>
                     </li>
@@ -44,39 +44,39 @@
                     <a class="nav-link menu-tab"
                        href="{{ path('app.course_info.presentation.index', { 'id': courseInfo.id }) }}"
                        id="menu-presentation">
-                        <i class="fas fa-star"></i>
+                        <i class="nav-icon fas fa-star"></i>
                         <p>{{ 'app.sidebar.presentation' | trans }}</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link menu-tab"
-                       id="menu-activities"
-                       href="{{ path('app.course_info.activities.index', { 'id': courseInfo.id }) }}">
-                        <i class="fas fa-list-alt"></i>
-                        <p>{{ 'app.sidebar.activities' | trans }}</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link menu-tab"
-                       id="menu-objectives-course"
-                       href="{{ path('app.course_info.objectives.index', { 'id': courseInfo.id }) }}">
-                        <i class="fas fa-bullseye"></i>
-                        <p>{{ 'app.sidebar.objectives' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link menu-tab"
                        id="menu-prerequisites-course"
                        href="{{ path('app.course_info.prerequisite.index', { 'id': courseInfo.id }) }}">
-                        <i class="fas fa-key"></i>
+                        <i class="nav-icon fas fa-suitcase"></i>
                         <p>{{ 'app.sidebar.prerequisites' | trans }}</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu-tab"
+                       id="menu-objectives-course"
+                       href="{{ path('app.course_info.objectives.index', { 'id': courseInfo.id }) }}">
+                        <i class="nav-icon fas fa-bullseye"></i>
+                        <p>{{ 'app.sidebar.objectives' | trans }}</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link menu-tab"
+                       id="menu-activities"
+                       href="{{ path('app.course_info.activities.index', { 'id': courseInfo.id }) }}">
+                        <i class="nav-icon fas fa-box-open"></i>
+                        <p>{{ 'app.sidebar.activities' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item has-treeview">
                     <a class="nav-link menu-tab"
                        id="menu-evaluation"
                        href="{{ path('app.course_info.evaluation.index', { 'id': courseInfo.id }) }}">
-                        <i class="fas fa-medal"></i>
+                        <i class="nav-icon fas fa-medal"></i>
                         <p>{{ 'app.sidebar.evaluation' | trans }}</p>
                     </a>
                 </li>
@@ -84,21 +84,21 @@
                     <a class="nav-link"
                        id="menu-resource"
                        href="{{ path('app.course_info.resource_equipment.index', { 'id': courseInfo.id }) }}">
-                        <i class="fas fa-tools"></i>
+                        <i class="nav-icon fas fa-pencil-ruler"></i>
                         <p>{{ 'app.sidebar.equipment' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
                     <a class="nav-link" href="{{ path('app.course_info.info.index', { 'id': courseInfo.id }) }}"
                        id="menu-info">
-                        <i class="fas fa-info-circle"></i>
+                        <i class="nav-icon fas fa-info-circle"></i>
                         <p>{{ 'app.sidebar.info' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
                     <a class="nav-link" href="{{ path('app.course_info.closing_remarks.index', { 'id': courseInfo.id }) }}"
                        id="menu-closing_remarks">
-                        <i class="fas fa-flag-checkered"></i>
+                        <i class="nav-icon fas fa-flag-checkered"></i>
                         <p>{{ 'app.sidebar.closing_remarks' | trans }}</p>
                     </a>
                 </li>
