--- a/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/view/teaching_mode.html.twig
@@ -23,6 +23,7 @@
                     {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpClass } %}
                 </div>
             {% endif %}
+            {% include 'course_info/presentation/view/_teaching_other_types.html.twig' with {'teachings': courseInfo.teachings, 'mode': constant('AppBundle\\Constant\\TeachingMode::IN_CLASS') } %}
         </div>
     {% elseif courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::DIST') %}
         <div class="row">
@@ -36,6 +37,7 @@
                     {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdDist } %}
                 </div>
             {% endif %}
+            {% include 'course_info/presentation/view/_teaching_other_types.html.twig' with {'teachings': courseInfo.teachings, 'mode': constant('AppBundle\\Constant\\TeachingMode::DIST') } %}
         </div>
     {% elseif courseInfo.teachingMode == constant('AppBundle\\Constant\\TeachingMode::HYBRID') %}
         <div class="row">
@@ -64,41 +66,24 @@
                             {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpHybridClass } %}
                         </div>
                     {% endif %}
+                    {% include 'course_info/presentation/view/_teaching_other_types.html.twig' with {'teachings': courseInfo.teachings, 'mode': constant('AppBundle\\Constant\\TeachingMode::IN_CLASS'), 'class': 'col-lg-6 col-md-12 col-12' } %}
                 </div>
             </div>
             <div class="col border-left">
                 <div class="row">
                     {% if courseInfo.teachingCmHybridDist is not null %}
                         <div class="col-lg-6 col-md-12 col-12">
-                            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmHybridDist, 'type': 'warning' } %}
+                            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmHybridDist } %}
                         </div>
                     {% endif %}
                     {% if courseInfo.teachingTdHybridDist is not null %}
                         <div class="col-lg-6 col-md-12 col-12">
-                            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdHybridDist, 'type': 'warning' } %}
+                            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdHybridDist } %}
                         </div>
                     {% endif %}
+                    {% include 'course_info/presentation/view/_teaching_other_types.html.twig' with {'teachings': courseInfo.teachings, 'mode': constant('AppBundle\\Constant\\TeachingMode::DIST'), 'class': 'col-lg-6 col-md-12 col-12' } %}
                 </div>
             </div>
         </div>
     {% endif %}
-    <div class="row">
-        {% for otherTeaching in courseInfo.teachings %}
-
-            <div class="col-md-3 col-sm-6 col-12">
-                {% if darkCard is defined %}
-                    {% set type = 'danger' %}
-                {% endif %}
-                <div class="info-box border rounded shadow {{ darkCard ?? '' }}">
-                    <span class="info-box-icon bg-{{ type|default('primary') }}">
-                        <i class="fas fa-clock"></i>
-                    </span>
-                    <div class="info-box-content">
-                        <span class="info-box-text">{{ otherTeaching.type }}</span>
-                        <span class="info-box-number">{{ otherTeaching.hourlyVolume }}H</span>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
 {% endif %}
