--- a/app/Resources/views/course_info/activities/form/edit_section.html.twig
+++ b/app/Resources/views/course_info/activities/form/edit_section.html.twig
@@ -1,6 +1,7 @@
 {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.section.edit', {'id': sectionId })}}) }}
 {{ form_errors(form) }}
 {{ form_row(form.title) }}
+{{ form_row(form.url) }}
 {{ form_row(form.description) }}
 <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-primary rounded">
