--- a/app/Resources/views/dashboard/index.html.twig
+++ b/app/Resources/views/dashboard/index.html.twig
@@ -1,67 +1,80 @@
 {% extends 'admin_layout.html.twig' %}
 {% set h1 = 'Tableau de bord des syllabus' %}
 {% block subContent %}
-<div class="card-body">
-    <div class="row">
-        <!-- small box publish syllabus -->
-        <div class="col-lg-3 col-6">
-            <div class="small-box bg-info">
-                <div class="inner">
-                    <h3>0</h3>
-                    <p>Syllabus publié</p>
+    <div class="card-body">
+        <div class="col-6" style="padding-left: 0px;">
+            <div class="row">
+                <div class="col-10">
+                    {{ form_start(form) }}
+                    {{ form_row(form.years) }}
+
                 </div>
-                <a class="small-box-footer">
-                    Plus d'infos
-                    <i class="fas fa-arrow-circle-right"></i>
-                </a>
+                <div class=" form-group col-2" style="display: flex; justify-content: flex-end">
+                    <button type="submit" class="btn btn-primary" style="align-self: flex-end">Afficher</button>
+                </div>
+                {{ form_end(form) }}
             </div>
         </div>
-
-        <!-- small box uncompleted syllabus -->
-        <div class="col-lg-3 col-6">
-            <div class="small-box bg-success">
-                <div class="inner">
-                    <h3>0 %</h3>
-                    <p>Syllabus en cours de remplissage</p>
+        <div class="row">
+            <!-- small box publish syllabus -->
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-info">
+                    <div class="inner">
+                        <h3>{{ syllabusPublished }}</h3>
+                        <p>Syllabus publié(s)</p>
+                    </div>
+                    <a href="{{ path('app.admin.course_info.published', {'year': form.years.vars.data.id }) }}" class="small-box-footer">
+                        Plus d'infos
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </a>
                 </div>
-                <a class="small-box-footer">
-                    Plus d'infos
-                    <i class="fas fa-arrow-circle-right"></i>
-                </a>
             </div>
-        </div>
 
-        <!-- small box count askAdvices -->
-        <div class="col-lg-3 col-6">
-            <div class="small-box bg-warning">
-                <div class="inner">
-                    <h3>{{ askAdviceCount }}</h3>
-                    <p>Demandes d'avis a traiter</p>
+            <!-- small box uncompleted syllabus -->
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-success">
+                    <div class="inner">
+                        <h3>{{ syllabusBeingFilled }} %</h3>
+                        <p>Syllabus en cours de remplissage</p>
+                    </div>
+                    <a href="{{ path('app.admin.course_info.being_filled', {'year': form.years.vars.data.id }) }}" class="small-box-footer">
+                        Plus d'infos
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </a>
                 </div>
-                <div class="icon">
-                    <i class="fas fa-comment-dots"></i>
-                </div>
-                <a href="{{ path('app_admin.ask_advice_index') }}" class="small-box-footer">
-                    Plus d'infos
-                    <i class="fas fa-arrow-circle-right"></i>
-                </a>
             </div>
-        </div>
 
-        <!-- small box count ask primes -->
-        <div class="col-lg-3 col-6">
-            <div class="small-box bg-danger">
-                <div class="inner">
-                    <h3>0</h3>
-                    <p>Demandes de primes a traiter</p>
+            <!-- small box count askAdvices -->
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-warning">
+                    <div class="inner">
+                        <h3>{{ askAdviceCount }}</h3>
+                        <p>Demande(s) d'avis a traiter</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fas fa-comment-dots"></i>
+                    </div>
+                    <a href="{{ path('app_admin.ask_advice_index') }}" class="small-box-footer">
+                        Plus d'infos
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </a>
                 </div>
-                <a class="small-box-footer">
-                    Plus d'infos
-                    <i class="fas fa-arrow-circle-right"></i>
-                </a>
+            </div>
+
+            <!-- small box count ask primes -->
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-danger">
+                    <div class="inner">
+                        <h3>0</h3>
+                        <p>Demandes de primes a traiter</p>
+                    </div>
+                    <a class="small-box-footer">
+                        Plus d'infos
+                        <i class="fas fa-arrow-circle-right"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
