--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -23,7 +23,7 @@
                        href="{{ path('app.course_info.dashboard.index', { 'id': courseInfo.id }) }}"
                        id="menu-dashboard">
                         <i class="nav-icon fas fa-th"></i>
-                        <p>{{ 'app.sidebar.dashboard' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.dashboard' | trans }}</p>
                     </a>
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
@@ -32,7 +32,7 @@
                            href="{{ path('app.course_info.permission.index', { 'id': courseInfo.id }) }}"
                            id="menu-permissions">
                             <i class="nav-icon fas fa-user-shield"></i>
-                            <p>{{ 'app.sidebar.permissions' | trans }}</p>
+                            <p>{{ 'app.course_info.sidebar.permissions' | trans }}</p>
                         </a>
                     </li>
                 {% endif %}
@@ -45,7 +45,7 @@
                        href="{{ path('app.course_info.presentation.index', { 'id': courseInfo.id }) }}"
                        id="menu-presentation">
                         <i class="nav-icon fas fa-star"></i>
-                        <p>{{ 'app.sidebar.presentation' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.presentation' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -53,7 +53,7 @@
                        id="menu-prerequisites-course"
                        href="{{ path('app.course_info.prerequisite.index', { 'id': courseInfo.id }) }}">
                         <i class="nav-icon fas fa-suitcase"></i>
-                        <p>{{ 'app.sidebar.prerequisites' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.prerequisites' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -61,7 +61,7 @@
                        id="menu-objectives-course"
                        href="{{ path('app.course_info.objectives.index', { 'id': courseInfo.id }) }}">
                         <i class="nav-icon fas fa-bullseye"></i>
-                        <p>{{ 'app.sidebar.objectives' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.objectives' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -69,7 +69,7 @@
                        id="menu-activities"
                        href="{{ path('app.course_info.activities.index', { 'id': courseInfo.id }) }}">
                         <i class="nav-icon fas fa-box-open"></i>
-                        <p>{{ 'app.sidebar.activities' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.activities' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item has-treeview">
@@ -77,7 +77,7 @@
                        id="menu-evaluation"
                        href="{{ path('app.course_info.evaluation.index', { 'id': courseInfo.id }) }}">
                         <i class="nav-icon fas fa-medal"></i>
-                        <p>{{ 'app.sidebar.evaluation' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.evaluations' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
@@ -85,21 +85,21 @@
                        id="menu-resource"
                        href="{{ path('app.course_info.resource_equipment.index', { 'id': courseInfo.id }) }}">
                         <i class="nav-icon fas fa-pencil-ruler"></i>
-                        <p>{{ 'app.sidebar.equipment' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.equipments' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
                     <a class="nav-link" href="{{ path('app.course_info.info.index', { 'id': courseInfo.id }) }}"
                        id="menu-info">
                         <i class="nav-icon fas fa-info-circle"></i>
-                        <p>{{ 'app.sidebar.info' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.information' | trans }}</p>
                     </a>
                 </li>
                 <li class="nav-item menu-tab">
                     <a class="nav-link" href="{{ path('app.course_info.closing_remarks.index', { 'id': courseInfo.id }) }}"
                        id="menu-closing_remarks">
                         <i class="nav-icon fas fa-flag-checkered"></i>
-                        <p>{{ 'app.sidebar.closing_remarks' | trans }}</p>
+                        <p>{{ 'app.course_info.sidebar.closing_remarks' | trans }}</p>
                     </a>
                 </li>
             </ul>
