--- a/app/Resources/views/course_info/dashboard/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/dashboard.html.twig
@@ -1,7 +1,8 @@
 {% extends 'course_info/layout.html.twig' %}
 {% block modals %}
     {{ parent() }}
-    <div class="modal modal-initialized fade" id="courseInfoDuplicationModal" style="display: none;" aria-hidden="true" data-show="{{ isFormValid ? "false" : "true" }}">
+    <div class="modal modal-initialized fade" id="courseInfoDuplicationModal" style="display: none;" aria-hidden="true"
+         data-show="{{ isFormValid ? "false" : "true" }}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
