--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ parent() }} • Accueil
+    {{ parent() }} • {{ 'homepage' | trans }}
 {% endblock %}
 
 {% block stylesheets %}
