--- a/app/Resources/views/course_info/objectives_course/form/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/achievement.html.twig
@@ -5,7 +5,7 @@
     <div class="col">
         <div>
             <div>
-                <label>À la fin de ce cours, l'étudiant devrait être capable de…</label>
+                <label>{{ 'app.objectives.form.description' | trans }}</label>
                 {% if form.description is defined %}
                     {{ form_widget(form.description) }}
                 {% endif %}
@@ -15,7 +15,7 @@
 </div>
 <div class="d-flex justify-content-center mt-3">
     <button type="submit" class="btn btn-primary rounded" id="create_button">
-        Ajouter
+        {{ 'app.objectives.form.add' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
