prerequisite sur onglet general, message liste vide

--- a/app/Resources/views/ask_advice/index.html.twig
+++ b/app/Resources/views/ask_advice/index.html.twig
@@ -38,7 +38,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucune activité n'a été trouvée avec ces critères</div>
+                <div class="alert alert-info">Aucune demande d'avis n'a été trouvée</div>
             {% endif %}
         </div>
         <!-- /.card-body -->
