--- a/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
@@ -1,18 +1,5 @@
 {% if courseInfo.coursePrerequisites is empty %}
-
-    <div class="row mt-10">
-        <div class="col">
-            <div class="d-flex">
-                <div class="d-flex flex-column">
-                            <span class="font-weight-bold">
-                                <i class="fas fa-exclamation-circle text-danger"></i>
-                                Prérequis
-                            </span>
-                    <span class="empty-data">Aucun prérequis renseigné</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <span class="empty-data" style="color:#902b2b; ">Information non renseignée.</span>
 {% else %}
     <table class="table table-hover">
         <thead>
