--- a/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/achievement.html.twig
@@ -1,17 +1,5 @@
 {% if courseInfo.courseAchievements is empty %}
-    <div class="row mt-10">
-        <div class="col">
-            <div class="d-flex">
-                <div class="d-flex flex-column">
-                            <span class="font-weight-bold">
-                                <i class="fas fa-exclamation-circle text-danger"></i>
-                                Compétence
-                            </span>
-                    <span class="empty-data">Aucune capacité renseignée</span>
-                </div>
-            </div>
-        </div>
-    </div>
+    <span class="empty-data" style="color:#902b2b; ">Information non renseignée.</span>
 {% else %}
     <table class="table table-hover">
         <thead>
@@ -24,7 +12,8 @@
                data-url="{{ path('app.course_info.objectives.sort_achievements', {'id': courseInfo.id}) }}">
         {% for achievement in courseInfo.courseAchievements %}
             <tr class="item-sortable" data-id="{{ achievement.id }}">
-                <td class="text-left">{{ achievement.description|humanizeEmptyData }}</td>
+                <td class="text-left">
+                    {{ achievement.description|humanizeEmptyData }}</td>
                 <td class="text-center">
                     <button type="button"
                             class="btn btn-link modal-action p-0"
@@ -40,6 +29,7 @@
                 </td>
             </tr>
         {% endfor %}
+        {{ levels|humanizeEmptyData() }}
         </tbody>
     </table>
 {% endif %}
