--- a/app/Resources/views/course_info/prerequisite/form/assist_tutoring.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/assist_tutoring.html.twig
@@ -14,7 +14,7 @@
 </div>
 <div class="d-flex justify-content-center mt-3">
     <button type="submit" class="btn btn-primary rounded" id="create_button">
-        Ajouter
+        {{ 'app.prerequisites.form.add' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
