--- a/app/Resources/views/course_info/prerequisite/form/edit_prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/edit_prerequisite.html.twig
@@ -5,23 +5,17 @@
     <div class="col">
         <div>
             <div>
-                <p>
-                    <label>Avant le début du cours, l'étudiant doit…</label>
-                    {% if form.description is defined %}
-                        {{ form_widget(form.description) }}
-                    {% endif %}
-                </p>
-                <p>
-                    <label>Choisir le(s) cours associé(s)</label>
-                    {{ form_widget(form.courses) }}
-                </p>
+                {% if form.description is defined %}
+                    {{ form_row(form.description) }}
+                {% endif %}
+                {{ form_row(form.courses) }}
             </div>
         </div>
     </div>
 </div>
 <div class="d-flex justify-content-center mt-3">
     <button type="submit" class="btn btn-primary rounded" id="create_button">
-        Ajouter
+        {{ 'app.prerequisites.form.add' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
