--- a/app/Resources/views/course_info/prerequisite/form/remove_tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/remove_tutoring_resources.html.twig
@@ -1,8 +1,10 @@
 {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.tutoring_resource.delete', {'id': form.vars.data.id}), 'data-card': 'card-tutoring-resources' }}) }}
 {{ form_errors(form) }}
-<h5>Êtes-vous sûr(e) de vouloir supprimer la remédiation "{{ form.vars.data.description }}" ?</h5>
+
+<h5>{{ 'app.prerequisites.form.tutoring_resources_delete' | trans({'%description%': form.vars.data.description}) }}</h5>
 <div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-danger rounded mr-2">Supprimer</button>
+    <button type="submit" class="btn btn-danger rounded mr-2">{{ 'app.prerequisites.form.delete' | trans }}</button>
 </div>
+
 {{ form_widget(form._token) }}
 {{ form_end(form) }}
