--- a/app/Resources/views/course_info/prerequisite/form/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/prerequisite/form/tutoring_resources.html.twig
@@ -5,9 +5,8 @@
     <div class="col">
         <div>
             <div>
-                <label>Si l'étudiant rencontre des difficultés, il peut…</label>
                 {% if form.description is defined %}
-                    {{ form_widget(form.description) }}
+                    {{ form_row(form.description) }}
                 {% endif %}
             </div>
         </div>
@@ -15,7 +14,7 @@
 </div>
 <div class="d-flex justify-content-center mt-3">
     <button type="submit" class="btn btn-primary rounded" id="create_button">
-        Ajouter
+        {{ 'app.prerequisites.form.add' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
