--- a/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
@@ -6,9 +6,9 @@
                 <div class="d-flex flex-column">
                             <span class="font-weight-bold">
                                 <i class="fas fa-exclamation-circle text-danger"></i>
-                                Prérequis
+                                {{ 'app.prerequisites.view.prerequisites' | trans }}
                             </span>
-                    <span class="empty-data">Aucun prérequis renseigné</span>
+                    <span class="empty-data">{{ 'app.prerequisites.view.empty_prerequisite' | trans }}</span>
                 </div>
             </div>
         </div>
@@ -17,8 +17,8 @@
     <table class="table table-hover">
         <thead>
         <tr>
-            <th class="text-left" style="width: 80%">Description</th>
-            <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
+            <th class="text-left" style="width: 80%">{{ 'app.prerequisites.view.description' | trans }}</th>
+            <th class="text-center" style="width: 20%">{{ 'app.prerequisites.view.update_delete' | trans }}</th>
         </tr>
         </thead>
         <tbody id="prerequisites-list" class="list-sortable"
@@ -29,7 +29,7 @@
                 <td class="text-left">
                     <span>{{ prerequisite.description }}</span></br>
                     <i>
-                        Cours obligatoire(s) :
+                        {{ 'app.prerequisites.view.mandatory_courses' | trans }}
                         {% set titles = '' %}
                         {% for c in prerequisite.courses %}
                              {% set titles = titles ~ (not loop.first ? ', ') ~ c.title %}
@@ -40,12 +40,12 @@
                 <td class="text-center">
                     <button type="button"
                             class="btn btn-link modal-action p-0"
-                            data-action-title="Modifier un prérequis"
+                            data-action-title="{{ 'app.prerequisites.view.update_prerequisite' | trans }}"
                             data-action-url="{{ path('app.course_info.prerequisite.edit', {'id': prerequisite.id}) }}">
                         <i class="fas fa-edit"></i>
                     </button>
                     <button type="button" class="btn btn-link modal-action p-0"
-                            data-action-title="Supprimer un prérequis"
+                            data-action-title="{{ 'app.prerequisites.view.delete_prerequisite' | trans }}"
                             data-action-url="{{ path('app.course_info.prerequisite.delete', {'id': prerequisite.id}) }}">
                         <i class="fas fa-trash-alt text-danger"></i>
                     </button>
