--- a/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
@@ -1,5 +1,9 @@
 {% if courseInfo.coursePrerequisites is empty %}
-    <span class="empty-data" style="color:#902b2b; ">Information non renseignée.</span>
+    <div class="d-flex justify-content-center align-items-center mandatory-data">
+        <span class="empty-data">
+            Information non renseignée.
+        </span>
+    </div>
 {% else %}
     <table class="table table-hover">
         <thead>
@@ -19,7 +23,7 @@
                         Cours obligatoire(s) :
                         {% set titles = '' %}
                         {% for c in prerequisite.courses %}
-                             {% set titles = titles ~ (not loop.first ? ', ') ~ c.title %}
+                            {% set titles = titles ~ (not loop.first ? ', ') ~ c.title %}
                         {% endfor %}
                         {{ titles|humanizeEmptyData }}
                     </i>
