--- a/app/Resources/views/course_info/evaluation/form/specifications.html.twig
+++ b/app/Resources/views/course_info/evaluation/form/specifications.html.twig
@@ -1,19 +1,17 @@
 {{ form_start(form, {'attr': {'class': 'form-focus'}}) }}
 {{ form_errors(form) }}
-<label class="required font-weight-bold">
-    Précisions (facultatif)
-</label>
+{{ form_label(form.mccAdvice) }}
 <small class="text-muted">
-    Exemple : informations sur les examens, le plagiat, matériels interdits, pénalités de retard, d'absences, d'orthographe, …
+    {{ 'app.evaluation.form.example' | trans }}
 </small>
 {{ form_errors(form.mccAdvice) }}
 {{ form_widget(form.mccAdvice) }}
 <div class="mt-2">
     <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('app.course_info.evaluation.specifications', {'id': courseInfo.id}) }}">
-        Sauvegarder
+        {{ 'app.evaluation.form.save' | trans }}
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('app.course_info.evaluation.specifications', {'id': courseInfo.id}) }}">
-        Annuler
+        {{ 'app.evaluation.form.cancel' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
